# PCADSch2KiCAD

./: .gitignore  CMakeLists.txt  KiCADOutputSchematic.c  KiCADOutputSchematic.h  LICENSE  Lexic.c  Lexic.h  PCADEnums.c  PCADEnums.h  PCADOutputSchematic.c  PCADOutputSchematic.h  PCADParser.c  PCADParser.h  PCADProcessSchematic.c  PCADProcessSchematic.h  PCADSch2KiCAD.cbp  PCADStructs.h  Parser.c  Parser.h  README.md  main.c
